@@ -764,6 +764,24 @@ name|CONFIG_DIRECTORY
 init|=
 literal|"solr.hdfs.confdir"
 decl_stmt|;
+DECL|field|CACHE_MERGES
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|CACHE_MERGES
+init|=
+literal|"solr.hdfs.blockcache.cachemerges"
+decl_stmt|;
+DECL|field|CACHE_READONCE
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|CACHE_READONCE
+init|=
+literal|"solr.hdfs.blockcache.cachereadonce"
+decl_stmt|;
 DECL|field|params
 specifier|private
 name|SolrParams
@@ -778,6 +796,16 @@ DECL|field|confDir
 specifier|private
 name|String
 name|confDir
+decl_stmt|;
+DECL|field|cacheReadOnce
+specifier|private
+name|boolean
+name|cacheReadOnce
+decl_stmt|;
+DECL|field|cacheMerges
+specifier|private
+name|boolean
+name|cacheMerges
 decl_stmt|;
 DECL|field|globalBlockCache
 specifier|private
@@ -1058,6 +1086,24 @@ name|hdfsDataDir
 argument_list|)
 expr_stmt|;
 block|}
+name|cacheMerges
+operator|=
+name|getConfig
+argument_list|(
+name|CACHE_MERGES
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|cacheReadOnce
+operator|=
+name|getConfig
+argument_list|(
+name|CACHE_READONCE
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|boolean
 name|kerberosEnabled
 init|=
@@ -1478,6 +1524,10 @@ argument_list|,
 name|blockCacheReadEnabled
 argument_list|,
 literal|false
+argument_list|,
+name|cacheMerges
+argument_list|,
+name|cacheReadOnce
 argument_list|)
 expr_stmt|;
 block|}
