@@ -466,6 +466,16 @@ specifier|final
 name|boolean
 name|blockCacheWriteEnabled
 decl_stmt|;
+DECL|field|cacheMerges
+specifier|private
+name|boolean
+name|cacheMerges
+decl_stmt|;
+DECL|field|cacheReadOnce
+specifier|private
+name|boolean
+name|cacheReadOnce
+decl_stmt|;
 DECL|method|BlockDirectory
 specifier|public
 name|BlockDirectory
@@ -494,10 +504,76 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|this
+argument_list|(
+name|dirName
+argument_list|,
+name|directory
+argument_list|,
+name|cache
+argument_list|,
+name|blockCacheFileTypes
+argument_list|,
+name|blockCacheReadEnabled
+argument_list|,
+name|blockCacheWriteEnabled
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|BlockDirectory
+specifier|public
+name|BlockDirectory
+parameter_list|(
+name|String
+name|dirName
+parameter_list|,
+name|Directory
+name|directory
+parameter_list|,
+name|Cache
+name|cache
+parameter_list|,
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|blockCacheFileTypes
+parameter_list|,
+name|boolean
+name|blockCacheReadEnabled
+parameter_list|,
+name|boolean
+name|blockCacheWriteEnabled
+parameter_list|,
+name|boolean
+name|cacheMerges
+parameter_list|,
+name|boolean
+name|cacheReadOnce
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|super
 argument_list|(
 name|directory
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|cacheMerges
+operator|=
+name|cacheMerges
+expr_stmt|;
+name|this
+operator|.
+name|cacheReadOnce
+operator|=
+name|cacheReadOnce
 expr_stmt|;
 name|this
 operator|.
@@ -1509,6 +1585,37 @@ operator|.
 name|context
 condition|)
 block|{
+comment|// depending on params, we don't cache on merges or when only reading once
+case|case
+name|MERGE
+case|:
+block|{
+return|return
+name|cacheMerges
+return|;
+block|}
+case|case
+name|READ
+case|:
+block|{
+if|if
+condition|(
+name|context
+operator|.
+name|readOnce
+condition|)
+block|{
+return|return
+name|cacheReadOnce
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
 default|default:
 block|{
 return|return
